# TaskMatrix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  conda-environment-ubuntu_x86.yaml  contribution.md  download.sh  pyproject.toml  requirement.txt  requirements.txt  run.sh  search.py  utils.py  visual_chatgpt.py  visual_chatgpt_u.py
.devcontainer/: Dockerfile  devcontainer.json
LowCodeLLM/: Dockerfile  README.md  config.template
LowCodeLLM/src/: app.py  executingLLM.py  index.html  lowCodeLLM.py  openAIWrapper.py  planningLLM.py  requirements.txt  supervisord.conf
LowCodeLLM/src/test/: test_execute.py  test_extend_workflow.py  test_get_workflow.py
LowCodeLLM/src/test/testcases/: execute_test_cases.json  extend_workflow_test_cases.json  get_workflow_test_cases.json
TaskMatrix.AI/: README.md  readme
extensions/GroundingDINO/: LICENSE  README.md  requirements.txt  setup.py
extensions/GroundingDINO/demo/: gradio_app.py  inference_on_a_image.py
