[tool.poetry]
name = "taskmatrix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "==0.0.101"
torch = "==1.13.1"
torchvision = "==0.14.1"
wget = "==3.2"
accelerate = "^0.20.3"
addict = "^2.4.0"
albumentations = "^1.3.0"
basicsr = "^1.4.2"
controlnet-aux = "^0.0.3"
diffusers = "^0.16.0"
einops = "^0.6.1"
gradio = "^3.27.0"
imageio = "^2.28.0"
imageio-ffmpeg = "^0.4.8"
invisible-watermark = "^0.1.5"
kornia = "^0.6.12"
numpy = "^1.24.3"
omegaconf = "^2.3.0"
open-clip-torch = "^2.18.0"
openai = "^0.27.4"
opencv-python = "^4.7.0.72"
prettytable = "^3.7.0"
safetensors = "^0.3.1"
streamlit = "^1.21.0"
test-tube = "^0.7.5"
timm = "^0.6.13"
torchmetrics = "^0.11.4"
transformers = "^4.28.1"
webdataset = "^0.2.48"
yapf = "^0.33.0"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
nw-groundingdino = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
